--- a/src/main/resources/chat-app.fxml
+++ b/src/main/resources/chat-app.fxml
@@ -10,7 +10,7 @@
       <TextField fx:id="ipTextField" layoutX="265.0" layoutY="28.0" prefHeight="25.0" prefWidth="339.0" />
       <TextField fx:id="portTextField" layoutX="612.0" layoutY="28.0" prefHeight="25.0" prefWidth="106.0" />
       <TextArea fx:id="chat" layoutX="42.0" layoutY="78.0" prefHeight="267.0" prefWidth="724.0" />
-      <TextField fx:id="message" layoutX="42.0" layoutY="373.0" prefHeight="25.0" prefWidth="608.0" />
+      <TextField fx:id="message" layoutX="42.0" layoutY="373.0" onKeyPressed="#typedEnter" prefHeight="25.0" prefWidth="608.0" />
       <Button fx:id="sendButton" layoutX="665.0" layoutY="373.0" mnemonicParsing="false" onMouseClicked="#sendButtonActionPerformed" prefHeight="25.0" prefWidth="106.0" text="Send" />
       <Button fx:id="listenButton" layoutX="51.0" layoutY="28.0" mnemonicParsing="false" onMouseClicked="#listenButtonActionPerformed" prefHeight="25.0" prefWidth="75.0" text="Listen" />
       <TextField fx:id="targetPort" layoutX="135.0" layoutY="28.0" prefHeight="25.0" prefWidth="124.0" />
